<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Security.SecurityPriv">

    <TextView
        android:id="@+id/viewPriv"
        android:layout_width="333dp"
        android:layout_height="41dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:text="@string/viewing_account_privileges"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/privType"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/account_type"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewPriv" />

    <TextView
        android:id="@+id/privText"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/security"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/privType"
        app:layout_constraintTop_toBottomOf="@+id/viewPriv" />

    <TextView
        android:id="@+id/privInfo"
        android:layout_width="292dp"
        android:layout_height="226dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="8dp"
        android:text="@string/security_has_the_highest_event_clearance_and_can_access_all_areas_of_the_venue"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>