<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VIP.VipPriv">

    <TextView
        android:id="@+id/viewPriv"
        android:layout_width="321dp"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:text="@string/viewing_account_privileges"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/privType"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/account_type"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewPriv" />

    <TextView
        android:id="@+id/privText"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/vip"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/privType"
        app:layout_constraintTop_toBottomOf="@+id/viewPriv" />

    <TextView
        android:id="@+id/privInfo"
        android:layout_width="316dp"
        android:layout_height="283dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="8dp"
        android:text="@string/vips_can_vary_from_performers_at_a_concert_to_business_employees_at_a_job_fair_vips_have_higher_clearance_to_attendants_and_can_access_backstage_areas"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>